project page overflowing fixes

--- a/css/global.css
+++ b/css/global.css
@@ -12,7 +12,7 @@ nav {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    min-height: 8vh;
+    height: 8vh;
     background-color: #2c3e50;
     font-family: "Poppins", sans-serif;
     box-shadow: 0px 20px 30px rgb(20, 20, 20);
