--- a/css/projects.css
+++ b/css/projects.css
@@ -7,14 +7,13 @@ body {
     overflow-x: hidden;
 }
 .isi {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     align-items: center;
     justify-content: center;
     text-align: center;
-    width: 100vw;
+    width: 100%;
+    height: 92vh;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 .isi a {
     text-decoration: inherit;
